get response from web page using OpenAI and DeepSeek

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -193,8 +193,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "312b0004-803e-41b6-b90a-9c33771ba9b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#OpenAI kullanarak Ollama ya bağlanıyorum\n",
+    "from openai import OpenAI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "e830a765-d89f-4e39-8d96-e498e8d0bd05",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generative Artificial Intelligence (GAI) has numerous business applications across various industries. Here are some examples:\n",
+      "\n",
+      "1. **Content Creation**: GAI-powered tools can generate high-quality content such as images, videos, and articles on demand. This can be used to augment the work of human content creators, providing them with a steady stream of ideas and materials.\n",
+      "2. **Marketing Analytics**: Generative AI can analyze large datasets to identify patterns and trends, helping businesses make data-driven decisions and optimize their marketing strategies.\n",
+      "3. **Customer Service Chatbots**: GAI-powered chatbots can provide 24/7 customer support, answering common questions and routing complex issues to human representatives.\n",
+      "4. **Personalized Product Recommendations**: Generative AI can analyze user behavior and generate personalized product recommendations based on individual preferences and interests.\n",
+      "5. **Image and Video Processing**: GAI-powered tools can generate realistic images and videos for various applications, such as:\n",
+      " * **Content creation**: generate high-quality images and videos for marketing materials, social media, or advertising campaigns.\n",
+      " * **Fashion and beauty**: create bespoke clothing, makeup looks, or hairstyles.\n",
+      " * **Film and television**: produce CGI characters, environments, and effects.\n",
+      "6. **Audio Processing**: Generative AI can generate music, voiceovers, and audio effects, such as:\n",
+      " * **Music composition**: create unique musical pieces for various contexts (e.g., advertising, films, video games).\n",
+      " * **Voiceover generation**: provide high-quality voiceovers for animations, podcasts, or audiobooks.\n",
+      "7. **Predictive Maintenance**: GAI can analyze sensor data from industrial equipment and predict potential failures before they occur, allowing businesses to schedule maintenance and reduce downtime.\n",
+      "8. **Financial Forecasting**: Generative AI can analyze historical financial data and generate forecasts for future market trends, helping businesses make informed investment decisions.\n",
+      "9. **Risk Assessment**: GAI-powered systems can evaluate complex risk scenarios and provide predictions of likelihood and potential impact, enabling businesses to mitigate risks more effectively.\n",
+      "10. **Supply Chain Optimization**: Generative AI can optimize supply chain operations by predicting demand fluctuations, identifying bottlenecks, and suggesting alternative logistics routes.\n",
+      "\n",
+      "These are just a few examples of the many business applications of Generative AI. As the technology continues to evolve, we can expect to see even more innovative uses across various industries.\n"
+     ]
+    }
+   ],
+   "source": [
+    "ollama_openai=OpenAI(base_url='http://localhost:11434/v1', api_key='ollama')\n",
+    "response=ollama_openai.chat.completions.create(\n",
+    "    model=MODEL,\n",
+    "    messages=messages\n",
+    ")\n",
+    "print(response.choices[0].message.content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae871b14-172b-4462-b0f5-6e065f93f383",
+   "metadata": {},
+   "source": [
+    "### DeepSeek"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "c707f55a-9855-49a7-9207-e3eaa18df0e1",
+   "metadata": {},
+   "source": [
+    "!ollama pull deepseek-r1:1.5b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "665d5a03-4b77-4f62-9b6a-c47f3268df1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<think>\n",
+      "\n",
+      "</think>\n",
+      "\n",
+      "LLMLER (Light-based Light Microoscopes) stands for \"Light Microscope Lever\" and is a type of light microscopy machine that uses a balance-of-light method to achieve lower sample depths compared to traditional light microscopes. Here are the key features and working principles of LLMLER:\n",
+      "\n",
+      "### 1. **Sampling Techniques**\n",
+      "   - **Laser-Driven Sampling**: Instead of focusing laser beams on tiny particles as in optical fluorescence, LLMLER focuses on the sampling efficiency. It samples particles that emit a single fluorescent quantum efficiently when illuminated by an external light beam.\n",
+      "   - **Single Shot Sample Extraction (SSSE)**: The machine processes each sample quickly to avoid having too many images taken, which can slow down collection.\n",
+      "\n",
+      "### 2. **Performance**\n",
+      "   - **Lower Depth of Field**: LLMLER allows for much shallower lateral resolution than traditional methods. A typical vertical field depth of focus is around 50 micrometers.\n",
+      "   - **High Throughput**: High capacity and throughput due to its single-shot processing capability, especially in parallel setups.\n",
+      "\n",
+      "### 3. **Applications**\n",
+      "   - **Subcellular Analysis**: Useful for studying microtubules, nuclear structures, RNA molecules, and protein complexes.\n",
+      "   - **Biological Research**: Great for examining cellular components under bright light conditions.\n",
+      "   - **Chemical Analysis**: Can be used for X-ray crystallography in some setups.\n",
+      "\n",
+      "### 4. **Advantages Over Traditional Methods**\n",
+      "   - Lower cost due to lower image acquisition rates.\n",
+      "   - Higher throughput and sensitivity.\n",
+      "   - Simultaneous observation of multiple objects.\n",
+      "   - Less time-consuming setup.\n",
+      "\n",
+      "### 5. **Challenges**\n",
+      "   - Small, lightweight size limits applications where very high speeds are needed (e.g., in live cell imaging).\n",
+      "   - Specialized optics require for accurate sampling efficiency.\n",
+      "   - Requires custom components and expertise for customization.\n",
+      "\n",
+      "### 6. **Implementation Steps**\n",
+      "   - Choose an external light source like LED or LEDs.\n",
+      "   - Design a laser system with specific power levels to generate sufficient light quantum per particle.\n",
+      "   - Set the sample depth based on your needs using a manual or auto-tuner.\n",
+      "   - Position the focus tube carefully to maintain optimal performance.\n",
+      "\n",
+      "### 7. **Examples of Applications**\n",
+      "   - High-resolution imaging in cell biology for studying proteins, DNA, and RNA.\n",
+      "   - X-ray crystallography in materials science using LLL microscopes.\n",
+      "   - Advanced chemical analysis using simultaneous particle extraction.\n",
+      "\n",
+      "In summary, LLMLER offers high performance and throughput with its innovative sampling techniques, making it suitable for applications where traditional microscopes fall short.\n"
+     ]
+    }
+   ],
+   "source": [
+    "response=ollama_openai.chat.completions.create(\n",
+    "    model=\"deepseek-r1:1.5b\",\n",
+    "    messages=[{\"role\":\"user\",\"content\":\"Can you tell me how the llmler works?\"}]\n",
+    ")\n",
+    "print(response.choices[0].message.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2b55c49-c82c-4c7b-b718-cecd4455b437",
    "metadata": {},
    "outputs": [],
    "source": []
